perf: Refactor with optimizations (#41)
* chore: Prepare for perf work — quiet test logging and ignore perf/

Lower com.retailsvc test logging from debug to info to avoid skewing
load-test profiles, ignore perf/ artifacts, and mark the completed
refactor plan as done.

* perf: Cache Spec.basePath at construction (W1)

basePath() was previously recomputed via URI.create on every request
through RequestPreparationFilter.stripBasePath. The result is
spec-static, so promote it to a record component populated in
Spec.from(...). Eliminates ~100 MB of URI allocations and ~26 CPU
samples per JFR run; k6 throughput +2.6% (44.2k -> 45.3k rps),
p95 -40 µs.

* perf: Memoise compiled regex Pattern in DefaultValidator (W2)

validateString recompiled Pattern on every request. Pattern is
immutable and thread-safe; cache compiled instances in a
ConcurrentHashMap keyed by the raw pattern string. Cache is bounded
by the spec's distinct pattern count.

Removes ~215 MB of int[]/Matcher allocations per JFR run and the
~31 CPU samples in validateString.

* perf: Pre-build ref->component index in Spec (W3)

resolveSchema/resolveParameter previously rebuilt the component name
via String.substring on every call. Build a Map keyed by the full
$ref string at construction time so resolution is a single lookup
with no per-request allocation.

Removes ~150 MB of String/byte[] allocs per JFR run; tightens the
validator hot path when schemas use \$ref.

* perf: Skip parseQuery when no QUERY parameters (W4)

validateParameters previously allocated a HashMap and ran
String.split on every request, even when the operation declared no
query parameters (the common case). Defer the parse to the first
QUERY parameter encountered; routes without query params now skip
the work entirely.

k6 throughput +3.3% (44.1k -> 45.5k rps), p95 -22 us.

* perf: Precompute Parameter JSON-pointer at parse time (W5)

The validation pointer "/<in>/<name>" was rebuilt with StringBuilder
on every request per parameter, even t