@@ -16,9 +16,14 @@ public record Spec(
     List<Server> servers,
     List<Operation> operations,
     Map<String, Schema> componentSchemas,
-    Map<String, Parameter> componentParameters) {
+    Map<String, Parameter> componentParameters,
+    String basePath,
+    Map<String, Schema> schemaRefIndex,
+    Map<String, Parameter> parameterRefIndex) {
 
   private static final String SCHEMA_KEY = "schema";
+  private static final String SCHEMA_REF_PREFIX = "#/components/schemas/";
+  private static final String PARAMETER_REF_PREFIX = "#/components/parameters/";
 
   @SuppressWarnings("unchecked")
   public static Spec from(Map<String, Object> raw) {
@@ -32,19 +37,35 @@ public record Spec(
     List<Operation> operations =
         parseOperations(
             (Map<String, Object>) raw.getOrDefault("paths", Map.of()), componentParameters);
-    return new Spec(openapi, info, servers, operations, componentSchemas, componentParameters);
+    return new Spec(
+        openapi,
+        info,
+        servers,
+        operations,
+        componentSchemas,
+        componentParameters,
+        computeBasePath(servers),
+        indexByRef(componentSchemas, SCHEMA_REF_PREFIX),
+        indexByRef(componentParameters, PARAMETER_REF_PREFIX));
   }
 
-  public String basePath() {
+  private static String computeBasePath(List<Server> servers) {
     if (servers.isEmpty()) {
       throw new IllegalStateException("no servers declared");
     }
-    return Optional.ofNullable(URI.create(servers.get(0).url()).getPath()).orElse("");
+    return Optional.ofNullable(URI.create(servers.getFirst().url()).getPath()).orElse("");
+  }
+
+  private static <T> Map<String, T> indexByRef(Map<String, T> components, String prefix) {
+    Map<String, T> out = LinkedHashMap.newLinkedHashMap(components.size());
+    for (var e : components.entrySet()) {
+      out.put(prefix + e.getKey(), e.getValue());
+    }
+    return Map.copyOf(out);
   }
 
   public Schema resolveSchema(String ref) {
-    String name = stripPrefix(ref, "#/components/schemas/");
-    Schema s = componentSchemas.get(name);
+    Schema s = schemaRefIndex.get(ref);
     if (s == null) {
       throw new IllegalArgumentException("unknown schema ref: " + ref);
     }
@@ -52,8 +73,7 @@ public record Spec(
   }
 
   public Parameter resolveParameter(String ref) {
-    String name = stripPrefix(ref, "#/components/parameters/");
-    Parameter p = componentParameters.get(name);
+    Parameter p = parameterRefIndex.get(ref);
     if (p == null) {
       throw new IllegalArgumentException("unknown parameter ref: " + ref);
     }
@@ -155,7 +175,7 @@ public record Spec(
       Map<String, Object> raw, Map<String, Parameter> componentParameters) {
     String ref = (String) raw.get("$ref");
     if (ref != null) {
-      String name = stripPrefix(ref, "#/components/parameters/");
+      String name = stripPrefix(ref, PARAMETER_REF_PREFIX);
       Parameter p = componentParameters.get(name);
       if (p == null) {
         throw new IllegalArgumentException("unknown parameter ref: " + ref);
